added additional pages, finished nav links

--- a/getinvolved.html
+++ b/getinvolved.html
@@ -38,16 +38,16 @@
             <div class="inner">
               <h3 class="masthead-brand">Youth4Safety</h3>
               <ul class="nav masthead-nav">
-                <li class="active"><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="abouttheproject.html">About the Project</a></li>
-                <li><a href="getinvolved.html">Get involved</a></li>
+                <li class="active"><a href="#">Get involved</a></li>
                 <li><a href="aboutus.html">About Us</a></li>
               </ul>
             </div>
           </div>
 
           <div class="inner cover">
-            <h1 class="cover-heading">SLIDER GOES HERE</h1>
+            <h1 class="cover-heading">GET INVOLVED</h1>
             <!--
             <p class="lead">LA LA LA LA LA LA LA</p>
             <p class="lead">
