--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           </div>
 
           <div class="inner cover">
-            <h1 class="cover-heading"><b><i>Be aware, be safe!</i></b></h1>
+            <h1 class="cover-heading"><b><i><font color="black">Be aware, be safe!</font></i></b></h1>
             
             <!-- <p class="lead">LA LA LA LA LA LA LA</p>
             <p class="lead">
