--- a/index.html
+++ b/index.html
@@ -44,15 +44,16 @@
           </div>
 
           <div class="inner cover">
-            <h1 class="cover-heading"><b><i><font color="black">Be aware, be safe!</font></i></b></h1>
+            <br>
+            <!-- <h1 class="cover-heading"><b><i><font color="black" font-family="arial">Be aware, be safe!</font></i></b></h1> -->
             
-            <!-- <p class="lead">LA LA LA LA LA LA LA</p>
+            <!-- <p class="lead">slider goes here</p>
             <p class="lead">
               <a href="#" class="btn btn-lg btn-default">Learn more</a>
             </p> -->
 
             <!-- <div class="lead"> -->
-              <div id="this-carousel-id" class="carousel slide"><!-- class of slide for animation -->
+          <div id="this-carousel-id" class="carousel slide"><!-- class of slide for animation -->
   <div class="carousel-inner">
     <div class="item active"><!-- class of active since it's the first item -->
       <img src="images/y4s1.jpg" alt=""/>
@@ -81,16 +82,11 @@
     <a class="carousel-control right" href="#this-carousel-id" data-slide="next">&rsaquo;</a>
 </div><!-- /.carousel -->
             </div>
-
 						
           <!-- </div>  -->
-
          <!--    aaaa -->
-
          <!--  Carousel - consult the Twitter Bootstrap docs at 
       http://twitter.github.com/bootstrap/javascript.html#carousel -->
-
-
 
           <div class="mastfoot">
             <div class="inner">
