--- a/abouttheproject.html
+++ b/abouttheproject.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="../../assets/ico/favicon.ico">
 
-    <title>Cover Template for Bootstrap</title>
+    <title>Youth for safety</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -47,13 +47,21 @@
           </div>
 
           <div class="inner cover">
-            <h1 class="cover-heading">ABOUT THE PROJECT</h1>
-            <!--
-            <p class="lead">LA LA LA LA LA LA LA</p>
+            <h1 class="cover-heading">YOUTH FOR SAFETY </h1>            
+
+            <font color = "black">
+
             <p class="lead">
-              <a href="#" class="btn btn-lg btn-default">Learn more</a>
+            An advocacy campaign project of Philippine Children Ministries Network (PCMN) against child sexual abuse
             </p>
-			-->
+
+            Almost one of every two Filipinos lived in urban areas- with Metro Manila as the most populated urban area.  Around 1.7 million children are living in informal settlements, working on the streets, which make them more vulnerable to human trafficking, abuse and exploitation.   Cases of child sexual abuse addressed by the Department of Social Welfare and Development increased from 663 in 2009 to 1404 in 2010.  Sexually abused children are the second most common cases handled by DSWD (29.6 % in 2009 and 27.3 % in 2010).
+          </font>
+          </div>
+
+          <div class="inner cover">
+            <h1 class="cover-heading">YOUTH FOR SAFETY </h1>            
+            <p class="lead">LA LA LA LA LA LA LA</p>
           </div>
 
           <div class="mastfoot">
