--- a/abouttheproject.html
+++ b/abouttheproject.html
@@ -55,13 +55,21 @@
             An advocacy campaign project of Philippine Children Ministries Network (PCMN) against child sexual abuse
             </p>
 
-            Almost one of every two Filipinos lived in urban areas- with Metro Manila as the most populated urban area.  Around 1.7 million children are living in informal settlements, working on the streets, which make them more vulnerable to human trafficking, abuse and exploitation.   Cases of child sexual abuse addressed by the Department of Social Welfare and Development increased from 663 in 2009 to 1404 in 2010.  Sexually abused children are the second most common cases handled by DSWD (29.6 % in 2009 and 27.3 % in 2010).
+           Almost one of every two Filipinos lived in urban areas- with Metro Manila as the most populated urban area.  Around 1.7 million children are living in informal settlements, working on the streets, which make them more vulnerable to human trafficking, abuse and exploitation.
+
           </font>
           </div>
 
           <div class="inner cover">
-            <h1 class="cover-heading">YOUTH FOR SAFETY </h1>            
-            <p class="lead">LA LA LA LA LA LA LA</p>
+            <h1 class="cover-heading">Goal</h1>            
+            <font color = "black">
+
+            <p class="lead">
+            Children and youth in Metro Manila, Visayas and Mindanao (and long term scale throughout the Philippines)
+            live in safety and receive of their basic right to safety, due to a reduction of Child Sexual Abuse cases. 
+            </p>
+
+          </font>
           </div>
 
           <div class="mastfoot">
