--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
 
           <div class="mastfoot">
             <div class="inner">
-              <p>Like Us at <a href="https://www.facebook.com/youth4safetyPH" target="_blank">Facebook</a>, Youth4Safety</a>.</p>
+              <p>Visit our <a href="https://www.facebook.com/youth4safetyPH" target="_blank">
+                <span style="text-decoration: underline;">Facebook</span>
+              </a> page.</p>
             </div>
           </div>
 
