--- a/abouttheproject.html
+++ b/abouttheproject.html
@@ -52,11 +52,7 @@
             <font color = "black">
             <b>
             <p class="lead">
-            An advocacy campaign project of Philippine Children Ministries Network (PCMN) against child sexual abuse
-
-            <br>
-            <br>
-            Almost one of every two Filipinos lived in urban areas- with Metro Manila as the most populated urban area.  Around 1.7 million children are living in informal settlements, working on the streets, which make them more vulnerable to human trafficking, abuse and exploitation.
+            The Youth for Safety Advocacy Campaign Project is an initiative to reduce, prevent, raise awareness and create more action against sexual child abuse. <br><br> It primarily involves 100 youth advocates from 51 PCMN member organizations who will reach out to 7,500 children and youth who are at-risk to sexual abuse, exploitation and trafficking. 
             </p>
 
           </font>
