--- a/aboutus.html
+++ b/aboutus.html
@@ -47,13 +47,36 @@
           </div>
 
           <div class="inner cover">
-            <h1 class="cover-heading">ABOUT US</h1>
-            <!--
-            <p class="lead">LA LA LA LA LA LA LA</p>
+            <h1 class="cover-heading">About Us</h1>
+            <br>
+            <font color = "black">
+            <b>
             <p class="lead">
-              <a href="#" class="btn btn-lg btn-default">Learn more</a>
+            Youth for safety is sn advocacy campaign project of 
+          </font>
+            <a href="http://www.pcmn.org/" target="_blank"> 
+            <span style="text-decoration: underline;">
+            <font color = "white">
+              www.pcmn.org
+            </font>
+            </font>
+            </span>
+            </a> 
+            <font color = "black">
+          which aims to build capacities of youth advocates on child protection and safety.
             </p>
-			-->
+          </font>
+            <h1 class="cover-heading">Hotlines:</h1>
+            <br>
+            <font color = "black">
+            <p class="lead">Our main office: 961-3823</p>
+            <p class="lead">Child Protection Unit: 404-3954</p>
+
+          </font>
+            <!-- <p class="lead"> 
+              <a href="#" class="btn btn-lg btn-default">Learn more</a>
+            </p> -->
+          </font>
           </div>
 
           <div class="mastfoot">
