--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div class="site-wrapper">
       <div class="site-wrapper-inner">
-        <div class="cover-container">
+        <div class="cover-container .transparent-bg">
           <div class="masthead clearfix">
             <div class="inner">
               <h3 class="masthead-brand">Youth4Safety</h3>
