--- a/abouttheproject.html
+++ b/abouttheproject.html
@@ -32,7 +32,7 @@
 
       <div class="site-wrapper-inner">
 
-        <div class="cover-container">
+        <div class="cover-container transparent-bg">
 
           <div class="masthead clearfix">
             <div class="inner">
