--- a/aboutus.html
+++ b/aboutus.html
@@ -24,6 +24,7 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    
   </head>
 
   <body>
@@ -32,7 +33,7 @@
 
       <div class="site-wrapper-inner">
 
-        <div class="cover-container">
+        <div class="cover-container transparent-bg">
 
           <div class="masthead clearfix">
             <div class="inner">
@@ -66,12 +67,15 @@
           which aims to build capacities of youth advocates on child protection and safety.
             </p>
           </font>
+
+            <div class="transbox">
             <h1 class="cover-heading">Hotlines:</h1>
             <br>
             <font color = "black">
             <p class="lead">Our main office: 961-3823</p>
             <p class="lead">Child Protection Unit: 404-3954</p>
-
+            </div>
+            </div>
           </font>
             <!-- <p class="lead"> 
               <a href="#" class="btn btn-lg btn-default">Learn more</a>
