--- a/abouttheproject.html
+++ b/abouttheproject.html
@@ -47,12 +47,12 @@
           </div>
 
           <div class="inner cover">
-            <h1 class="cover-heading">YOUTH FOR SAFETY </h1>            
+            <h1 class="cover-heading">About the Project</h1> 
 
             <font color = "black">
             <b>
             <p class="lead">
-            The Youth for Safety Advocacy Campaign Project is an initiative to reduce, prevent, raise awareness and create more action against sexual child abuse. <br><br> It primarily involves 100 youth advocates from 51 PCMN member organizations who will reach out to 7,500 children and youth who are at-risk to sexual abuse, exploitation and trafficking. 
+            The <font color="white">Youth for Safety Advocacy</font> Campaign Project is an initiative to reduce, prevent, raise awareness and create more action against sexual child abuse. <br><br> It primarily involves 100 youth advocates from 51 PCMN member organizations who will reach out to 7,500 children and youth who are at-risk to sexual abuse, exploitation and trafficking. 
             </p>
 
           </font>
