--- a/aboutus.html
+++ b/aboutus.html
@@ -53,7 +53,7 @@
             <font color = "black">
             <b>
             <p class="lead">
-            Youth for safety is sn advocacy campaign project of 
+            Youth for safety is an advocacy campaign project of 
           </font>
             <a href="http://www.pcmn.org/" target="_blank"> 
             <span style="text-decoration: underline;">
