trying to fix white flicker..

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="cover-container .transparent-bg">
           <div class="masthead clearfix">
             <div class="inner">
-              <h3 class="masthead-brand">Youth4Safety</h3>
+              <h3 class="masthead-brand">Youth for safety </h3>
               <ul class="nav masthead-nav">
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="abouttheproject.html">About the Project</a></li>
