<h3 class=masthead-brand> <b>Youth for safety </b> </h3>

--- a/getinvolved.html
+++ b/getinvolved.html
@@ -36,7 +36,7 @@
 
           <div class="masthead clearfix">
             <div class="inner">
-              <h3 class="masthead-brand">Youth4Safety</h3>
+              <h3 class="masthead-brand"> <b>Youth for safety </b> </h3>
               <ul class="nav masthead-nav">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="abouttheproject.html">About the Project</a></li>
