--- a/getinvolved.html
+++ b/getinvolved.html
@@ -48,12 +48,29 @@
 
           <div class="inner cover">
             <h1 class="cover-heading">GET INVOLVED</h1>
+            <br>
+            <p class="lead">
+              <font color = "white">
+              <span style="text-decoration: underline;">
+              <h3><b>Stop Child Abuse. Spread the awareness. Make a difference.</b></h3>
+              </span>
+              </font>
+            </p>
+            <br>
+            <p class="lead">
+            <a href="#" class="btn btn-lg btn-default">Volunteer</a>
+            <a href="#" class="btn btn-lg btn-default">Share</a>
+            </p>
+            <p>
+            <a href="#" class="btn btn-lg btn-default">Support our other Advocacies</a>
+            </p>
+            <br>
             <!--
             <p class="lead">LA LA LA LA LA LA LA</p>
             <p class="lead">
               <a href="#" class="btn btn-lg btn-default">Learn more</a>
             </p>
-			-->
+			       -->
           </div>
 
           <div class="mastfoot">
