--- a/aboutus.html
+++ b/aboutus.html
@@ -83,9 +83,10 @@
 
           <div class="mastfoot">
             <div class="inner">
-              <p>Visit our <a href="https://www.facebook.com/youth4safetyPH" target="_blank">
+              <!-- <p>Visit our <a href="https://www.facebook.com/youth4safetyPH" target="_blank">
                 <span style="text-decoration: underline;">Facebook</span>
-              </a> page.</p>
+              </a> page.</p> -->
+              <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fyouth4safetyPH&amp;width&amp;layout=standard&amp;action=like&amp;show_faces=false&amp;share=false&amp;height=35&amp;appId=623718097651327" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:35px;" allowTransparency="true"></iframe>
             </div>
           </div>
 
