--- a/getinvolved.html
+++ b/getinvolved.html
@@ -58,11 +58,11 @@
             </p>
             <br>
             <p class="lead">
-            <a href="#" class="btn btn-lg btn-default">Volunteer</a>
-            <a href="#" class="btn btn-lg btn-default">Share</a>
+            <a href="http://www.pcmn.org/support-us" target="_blank" class="btn btn-lg btn-default">Volunteer</a>
+            <a href="https://www.facebook.com/youth4safetyPH" target="_blank" class="btn btn-lg btn-default">Share</a>
             </p>
             <p>
-            <a href="#" class="btn btn-lg btn-default">Support our other Advocacies</a>
+            <a href="http://www.pcmn.org/news-and-events/events" target="_blank" class="btn btn-lg btn-default">Support our other Advocacies</a>
             </p>
             <br>
             <!--
@@ -75,9 +75,10 @@
 
           <div class="mastfoot">
             <div class="inner">
-              <p>Visit our <a href="https://www.facebook.com/youth4safetyPH" target="_blank">
+              <!-- <p>Visit our <a href="https://www.facebook.com/youth4safetyPH" target="_blank">
                 <span style="text-decoration: underline;">Facebook</span>
-              </a> page.</p>
+              </a> page.</p> -->
+              <iframe src="https://www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2Fyouth4safetyPH&amp;width&amp;layout=standard&amp;action=like&amp;show_faces=false&amp;share=false&amp;height=35&amp;appId=623718097651327" scrolling="no" frameborder="0" style="border:none; overflow:hidden; height:35px;" allowTransparency="true"></iframe>
             </div>
           </div>
 
