bckg padding, spellings..

--- a/aboutus.html
+++ b/aboutus.html
@@ -68,10 +68,10 @@
             </p>
           </font>
 
-            <h1 class="cover-heading">Hotlines:</h1>
+            <h1 class="cover-heading">Contact Us:</h1>
             <br>
             <font color = "black">
-            <p class="lead">Our main office: 961-3823</p>
+            <p class="lead">Main office: 961-3823</p>
             <p class="lead">Child Protection Unit: 404-3954</p>
           </b>
           <br>
