--- a/getinvolved.html
+++ b/getinvolved.html
@@ -48,11 +48,11 @@
 
           <div class="inner cover">
             <h1 class="cover-heading">GET INVOLVED</h1>
-            
+
             <p class="lead">
               <font color = "white">
               <span style="text-decoration: underline;">
-              <h3><b>Stop Child Abuse. Spread the awareness. Make a difference.</b></h3>
+              <h2><b>Stop child sexual abuse. Spread awareness. <br>Make a difference.</b></h2>
               </span>
               </font>
             </p>
