--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
           </div>
 
           <div class="inner cover">
-            <br>
-            <h1 class="cover-heading"><b><i><font color="white">Be aware, be safe!</font></i></b></h1>
+            <!-- <br>
+            <h1 class="cover-heading"><b><i><font color="white">Be aware, be safe!</font></i></b></h1> -->
             
             <!-- <p class="lead">slider goes here</p>
             <p class="lead">
@@ -53,10 +53,41 @@
             </p> -->
 
             <!-- <div class="lead"> -->
-
+            <!--
             <div class="video-container">
               <iframe src="http://www.youtube.com/embed/mfg7QJoa3o4" width="640" height="360" frameborder="0"></iframe>
             </div>
+          -->
+          <!-- class of slide for animation -->
+            <div id="this-carousel-id" class="carousel slide">
+                <div class="carousel-inner">
+                  <div class="item active"><!-- class of active since it's the first item -->
+                    <img src="images/y4s1.jpg" alt=""/>
+                    <div class="carousel-caption">
+                      <!-- <p>Caption text here</p> -->
+                    </div>
+                  </div>
+
+                  <div class="item">
+                    <img src="images/y4s2.jpg" alt="" />
+                    <div class="carousel-caption">
+                      <!-- <p>Caption text here</p> -->
+                    </div>
+                  </div>
+                  
+                  <div class="item">
+                    <img src="images/y4s3.jpg" alt="" />
+                    <div class="carousel-caption">
+                      <!-- <p>Caption text here</p> -->
+                    </div>
+                  </div>
+                </div><!-- /.carousel-inner -->
+                <!--  Next and Previous controls below
+                      href values must reference the id for this carousel -->
+                  <a class="carousel-control left" href="#this-carousel-id" data-slide="prev">&lsaquo;</a>
+                  <a class="carousel-control right" href="#this-carousel-id" data-slide="next">&rsaquo;</a>
+              </div>
+          <!-- /.carousel -->
           </div>
 
 
