--- a/aboutus.html
+++ b/aboutus.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="../../assets/ico/favicon.ico">
 
-    <title>Youth for safety</title>
+    <title>Youth for Safety</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -37,7 +37,7 @@
 
           <div class="masthead clearfix">
             <div class="inner">
-              <h3 class="masthead-brand"> <b>Youth for safety </b> </h3>
+              <h3 class="masthead-brand"> <b>Youth for Safety </b> </h3>
               <ul class="nav masthead-nav">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="abouttheproject.html">About the Project</a></li>
