--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
               <!-- PARTNERS -->
               <div class="col-md-12 text-center"><h2><font color="white"><br>Partners</h2></div>
               <div class="col-md-8 col-md-offset-2 text-center">
-                  <img class="img-circle" hspace="20" src="images/P1.png" style="width:80px;height:80px">
-                  <img class="img-circle" hspace="20" src="images/P2.png" style="width:80px;height:80px">
-                  <img class="img-circle" hspace="20" src="images/P3.png" style="width:80px;height:80px">
+                  <img class="img-circle" hspace="20" src="images/p1.png" style="width:80px;height:80px">
+                  <img class="img-circle" hspace="20" src="images/p2.png" style="width:80px;height:80px">
+                  <img class="img-circle" hspace="20" src="images/p3.png" style="width:80px;height:80px">
               </div>
 
               <div class="col-md-12 text-center">
