try overlapping texts

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
     </div>
 
-    <div class="blurb" id="sec1">
+    <div class="blurb pugs1" id="sec1">
         <div class="container">
           <div class="row">
               <p class="lead">
@@ -60,24 +60,19 @@
         </div>
     </div>
 
-    <div class="callout" id="sec2">
+    <div class="callout pugs1" id="sec2">
         <div class="container">
           <div class="row">
               <p class="lead">
                 <b>
-                  <!-- Stop child sexual abuse. Spread awareness. Make a difference. -->
                   <font color = "yellow"> Be part of Youth for safety's cause.</font>
-                  
                   <font color = "red"><u>VOLUNTEER</u></font>
                   <font color = "yellow">and become a youth advocate.</font>
-                  
                   <font color = "red"><u>REPORT</u></font> 
                   <font color = "yellow">on cases of child sexual abuse.</font>
-
                   <font color = "yellow">Make a </font>
                   <font color = "red"><u>DONATION</u></font>
                   <font color = "yellow">so that we can protect and support more children who were sexually abused.</font>
-
                 </b>
               </p>
           </div>
