--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     <div class="callout pugs1" id="sec2">
         <div class="container">
           <div class="row">
+            <div class = "span6">
               <p class="lead">
                   <font color = "yellow"> Be part of Youth for safety's cause.</font>
                   <font color = "red"><u>VOLUNTEER</u></font>
@@ -70,6 +71,7 @@
                   <font color = "red"><u>DONATION</u></font>
                   <font color = "yellow">so that we can protect and support more children who were sexually abused.</font>
               </p>
+            </div>
           </div>
         </div>
     </div>
