--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
           <div class="navbar-collapse collapse navbar-right" id="navbar">
             <ul class="nav navbar-nav">
               <!-- <li><a href="#sec1">Home</a></li> -->
-              <li><a href="#sec1">About</a></li>
-              <li><a href="#sec2">Get Involved</a></li>
-              <li><a href="#sec3">Connect</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#getinvolved">Get Involved</a></li>
+              <li><a href="#connect">Connect</a></li>
             </ul>
           </div>
          </div>
@@ -42,7 +42,7 @@
         </div>
     </div>
 
-    <div class="blurb pugs1" id="sec1">
+    <div class="blurb pugs1" id="about">
         <div class="container">
           <div class="row">
               <p class="lead">
@@ -58,7 +58,7 @@
         </div>
     </div>
 
-    <div class="callout pugs1" id="sec2">
+    <div class="callout pugs1" id="getinvolved">
         <div class="container">
           <div class="row">
             <div class = "span6">
@@ -77,7 +77,7 @@
         </div>
     </div>
 
-  <div class="connect vert" id="sec3">
+  <div class="connect vert" id="connect">
         <div class="container">
               <div class="col-md-12 text-center"><h2><font color="white">Social Media</h2></div>
               <div class="col-md-8 col-md-offset-2 text-center">
