--- a/index.html
+++ b/index.html
@@ -77,6 +77,52 @@
         </div>
     </div>
 
+     <!-- Carousel
+    ================================================== -->
+    <div id="myCarousel" class="carousel slide">
+      <div class="carousel-inner">
+
+
+        <div class="item active">
+          <img src="images/know1.jpg" alt="" height="500" width="100%">
+          <div class="container">
+            <div class="carousel-caption">
+              <!-- <h1>Example headline.</h1>
+              <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <a class="btn btn-large btn-primary" href="#">Sign up today</a> -->
+            </div>
+          </div>
+        </div>
+
+        <div class="item">
+          <img src="images/know2.jpg" alt="" height="500" width="100%">
+          <div class="container">
+            <div class="carousel-caption">
+              <!-- <h1>Example headline.</h1>
+              <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <a class="btn btn-large btn-primary" href="#">Sign up today</a> -->
+            </div>
+          </div>
+        </div>
+
+        <div class="item">
+          <img src="images/know3.jpg" alt="" height="500" width="100%">
+          <div class="container">
+            <div class="carousel-caption">
+              <!-- <h1>Example headline.</h1>
+              <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+              <a class="btn btn-large btn-primary" href="#">Sign up today</a> -->
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <a class="left carousel-control" href="#myCarousel" data-slide="prev">&lsaquo;</a>
+      <a class="right carousel-control" href="#myCarousel" data-slide="next">&rsaquo;</a>
+    </div>
+
+    <!-- /.carousel -->
+
   <div class="connect vert" id="connect">
         <div class="container">
               <div class="col-md-12 text-center"><h2><font color="white">Social Media</h2></div>
