--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
               <!-- <li><a href="#sec1">Home</a></li> -->
               <li><a href="#about">About</a></li>
               <li><a href="#getinvolved">Get Involved</a></li>
+              <li><a href="#learn">Learn</a></li>
               <li><a href="#connect">Connect</a></li>
             </ul>
           </div>
@@ -79,12 +80,12 @@
 
      <!-- Carousel
     ================================================== -->
-    <div id="myCarousel" class="carousel slide">
+    <div id="learn" class="carousel slide">
       <div class="carousel-inner">
 
 
         <div class="item active">
-          <img src="images/know1.jpg" alt="" height="500" width="100%">
+          <img src="images/learn1.jpg" alt="" height="500" width="100%">
           <div class="container">
             <div class="carousel-caption">
               <!-- <h1>Example headline.</h1>
@@ -95,7 +96,7 @@
         </div>
 
         <div class="item">
-          <img src="images/know2.jpg" alt="" height="500" width="100%">
+          <img src="images/learn2.jpg" alt="" height="500" width="100%">
           <div class="container">
             <div class="carousel-caption">
               <!-- <h1>Example headline.</h1>
@@ -106,7 +107,7 @@
         </div>
 
         <div class="item">
-          <img src="images/know3.jpg" alt="" height="500" width="100%">
+          <img src="images/learn3.jpg" alt="" height="500" width="100%">
           <div class="container">
             <div class="carousel-caption">
               <!-- <h1>Example headline.</h1>
@@ -117,8 +118,8 @@
         </div>
       </div>
 
-      <a class="left carousel-control" href="#myCarousel" data-slide="prev">&lsaquo;</a>
-      <a class="right carousel-control" href="#myCarousel" data-slide="next">&rsaquo;</a>
+      <a class="left carousel-control" href="#learn" data-slide="prev">&lsaquo;</a>
+      <a class="right carousel-control" href="#learn" data-slide="next">&rsaquo;</a>
     </div>
 
     <!-- /.carousel -->
