--- a/index.html
+++ b/index.html
@@ -53,7 +53,12 @@
                   <font color = "yellow"> prevent</font>
                   <font color = "blue">,</font>
                   <font color = "yellow"> raise awareness</font>
-                  <font color = "blue">and create more action against sexual child abuse.  </font> 
+                  <font color = "blue">
+
+                    and create more action against sexual child abuse. It primarily involves 100 youth advocates from 51 PCMN member
+                    organizations who will reach out to 7,500 children and youth who are at-risk to sexual abuse, exploitation and trafficking
+
+                  </font> 
               </p>
           </div>
         </div>
