--- a/index.html
+++ b/index.html
@@ -71,13 +71,12 @@
             <div class = "span6">
               <p class="lead">
                   <font color = "white"> Be part of Youth for safety's cause.</font>
-                  <font color = "red"><u>VOLUNTEER</u></font>
-                  <font color = "yellow">and become a youth advocate.</font>
-                  <font color = "red"><u>REPORT</u></font> 
-                  <font color = "yellow">on cases of child sexual abuse.</font>
-                  <font color = "yellow">Make a </font>
-                  <font color = "red"><u>DONATION</u></font>
-                  <font color = "yellow">so that we can protect and support more children who were sexually abused.</font>
+                  <font color = "red" size= 35><u>VOLUNTEER</u></font>
+                  <font color = "white">and become a youth advocate.</font>
+                  <font color = "red" size= 35><u>REPORT</u></font> 
+                  <font color = "white">on cases of child sexual abuse.</font>
+                  <font color = "red" size= 35><u>DONATE</u></font>
+                  <font color = "white">so that we can protect and support more children who were sexually abused.</font>
               </p>
             </div>
           </div>
